Checkpoint - JThread and JThreadAttr structs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,18 @@ project(juwon_conc_lib C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_library(juwon_conc_lib STATIC library.c
+# Library target
+add_library(juwon_conc_lib STATIC
+        JThread.c
         JThread.h
-        JThread.cpp)
+        JThreadAttr.h
+        JThreadAttr.c
+)
+
+# Test or demo executable
+add_executable(main
+        main.c
+)
+
+# Link the executable with the library
+target_link_libraries(main PRIVATE juwon_conc_lib pthread)
